@@ -86,7 +86,8 @@ void FocusControl::cycleFocus(int opts, bool cycle_reverse) {
 
     FocusedWindows *window_list = (opts & CYCLELINEAR) ? &m_creation_order_list : &m_focused_list;
     if (!m_cycling_focus) {
-        m_cycling_focus = true;
+        if (Fluxbox::instance()->watchingScreen())
+            m_cycling_focus = true;
         if (opts & CYCLELINEAR) {
             m_cycling_creation_order = true;
             m_cycling_window = find(window_list->begin(),window_list->end(),s_focused_window);
